# zulu

./: .gitignore  .ycm_extra_conf.py  Cargo.toml  README.md  Rocket.toml  WORKSPACE  app.py  bazel-bin  bazel-out  bazel-testlogs  bazel-zuluapi  gitignore  requirements.txt  zulu.sql
api/routes/: accounts.py  root.py  routes.py
chelmsford/: Cargo.toml
config/: default.toml
drift/: Cargo.toml  index.html  style.css
drift/src/: main.rs  router.rs
drift/src/components/: challenge_list.rs  custom_button.rs  file_upload.rs  footer.rs  get_challenges.rs  leaderboard.rs  mod.rs  number_input.rs  origin.rs  search_bar.rs  text_input.rs  top_bar.rs
drift/src/forms/: create_flag.rs  login_form.rs  mod.rs  register_form.rs  submit_flag.rs
drift/src/pages/: challenge_template.rs  home.rs  login.rs  mod.rs  notfound.rs  register.rs
drift/src/settings/: mod.rs  modify.rs
drift/src/views/: challenge.rs  challengeinfo.rs  createflag.rs  flag.rs  flaginfo.rs  home.rs  login.rs  mod.rs  register.rs  submitflag.rs
drift/src/views/components/: custom_button.rs  leaderboard.rs  mod.rs  number_input.rs  origin.rs  search_bar.rs  text_input.rs  top_bar.rs
drift/src/views/settings/: delete.rs  mod.rs  modify.rs
frontend/: Cargo.toml
migrations/: 202300901_testdb.sql  20230109152730_testdb.sql
src/: main.rs  settings.rs
src/accounts/: BUILD  server.py
src/api/: challenge.rs  leaderboard.rs  login.rs  mod.rs  modify.rs  register.rs  remove.rs  response.rs
src/auth/: accesslevel.rs  cors.rs  jwt.rs  mod.rs  rerouter.rs  user.rs
src/connections/: database.rs  filesystem.rs  ldap.rs  mod.rs
src/protobufs/: BUILD  accounts.proto  zulu.proto
src/server/: BUILD  server.py  server_test.py
src/structs/: flag.rs  json.rs  leaderboard.rs  login.rs  mod.rs  user.rs
src/tests/: lib.rs
test/helpers/: server_test_base.py
test/routes/: accounts_test.py  root.py  root_test.py  routes_test.py
zulu/: Cargo.toml  zulu.sql
zulu/config/: default.toml
zulu/migrations/: 20230109152730_testdb.sql
zulu/src/: main.rs
zulu/src/api/: challenge.rs  create_challenge.rs  create_flag.rs  delete_challenge.rs  delete_flag.rs  leaderboard.rs  login.rs  mod.rs  modify.rs  modify_challenge.rs  modify_challenge.rs.orig  modify_flag.rs  register.rs  remove.rs  submit_challenge.rs  submit_flag.rs
zulu/src/auth/: cors.rs  jwt.rs
zulu/src/connections/: database.rs  database.rs.orig  filesystem.rs  ldap.rs  mod.rs
zulu/src/structs/: challenge.rs  flag.rs  json.rs  leaderboard.rs  (+4 more)
(+4 files in other folders)
