[package]
name = "zulu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
ldap3 = "0.11.0-beta.1"
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rocket = "0.5.0-rc.2"
