[package]
name = "zulu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
ldap3 = "0.11.0-beta.1"
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json","secrets"]}
sqlx = { version = "0.6.2", features = ["mysql","runtime-async-std-native-tls","time","macros"]}
hmac = "0.8.1"
sha2 = "0.9"
bcrypt = "0.8.2"
jwt = "0.9.0"
