[package]
name = "drift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20" , features = ["csr"]}
yew-router = "0.17.0"
wasm-bindgen-futures = "0.4.30"
reqwasm = "0.5.0"
serde_json = "1.0"
