[package]
name = "drift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20" , features = ["csr"]}
yew-router = "0.17.0"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlInputElement", "Blob", "XmlHttpRequest"] }
js-sys = "0.3"
gloo = "0.6.1"
gloo-net = "0.2.6"
gloo-storage = "0.2.2"
reqwasm = "0.5.0"
reqwest = { version = "0.11.14", features = ["json","cookies"] }
url = "2.3.1"
serde_json = "1.0"
serde = "1.0"
strum = "0.24.1"
strum_macros = "0.24"
base64 = "0.21.0"
